# hikari-ongaku

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  dev_requirements.txt  doc_requirements.txt  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  test_requirements.txt
.github/: dependabot.yml
.github/workflows/: checks.yml  ci.yml  publish.yml  tests.yml
docs/: changelog.md  conf.py  index.md  index.rst  mkdocs.yml  modules.rst  ongaku.models.rst  ongaku.rst
docs/api/: builders.md  client.md  enums.md  errors.md  events.md  exceptions.md  filters.md  handlers.md  index.md  information.md  node.md  player.md  playlist.md  rest.md  route_planner.md  session.md  statistics.md  track.md  types.md
docs/api/abc/: base.md  bases.md  builders.md  error.md  errors.md  events.md  extension.md  extensions.md  filters.md  handler.md  handlers.md  info.md  lavalink.md  player.md  playlist.md  route_planner.md  routeplanner.md  session.md  statistics.md  track.md
docs/api/api/: builders.md  handlers.md  rest.md
docs/api/ext/: checker.md  injection.md  youtube.md
docs/api/impl/: errors.md  events.md  filters.md  handlers.md  info.md  player.md  playlist.md  routeplanner.md  session.md  statistics.md  track.md
docs/api_reference/: client.md  enums.md  errors.md  nodes.md  ongaku.md  player.md  rest.md
docs/api_reference/abc/: base.md  events.md  filters.md  lavalink.md  player.md  session.md  track.md
docs/api_reference/events/: event_handler.md  other.md  track.md
docs/docs/: index.md
docs/docs/api_reference/: ongaku.md
docs/docs/getting_started/: commands.md  index.md
docs/ext/: checker.md  creation.md  index.md  injection.md  local.md  youtube.md
docs/getting_started/: basics.md  commands.md  filters.md  index.md  nodes.md  plugins.md  sessions.md
docs/gs/: client.md  filter.md  filters.md  index.md  injection.md  player.md  plugins.md  session.md
docs/site/api_reference/errors/: index.html
docs/site/api_reference/player/: index.html
docs/site/api_reference/rest/: index.html
docs/site/getting_started/: index.html
docs/site/getting_started/basics/: index.html
docs/site/getting_started/nodes/: index.html
docs/site/search/: search_index.json
docs/source/: conf.py  index.rst
docs/stylesheets/: extra.css
examples/: README.md  akarui.py  arc.py  crescent.py  examples_requirements.txt  hikari.py  lightbulb.py  tanjun.py
examples/arc/: basic.py
examples/crescent/: basic.py
examples/hikari/: basic.py
examples/lightbulb/: basic.py
examples/tanjun/: basic.py
ongaku/: __init__.py  __main__.py  about.py  builders.py  client.py  enums.py  error.py  errors.py  events.py  exceptions.py  filters.py  handlers.py  information.py  internal.py  node.py  nodes.py  ongaku.py  ongaku_player.py  player.py  playlist.py  rest.py  rest_api.py  routeplanner.py  session.py  statistics.py  track.py
ongaku/abc/: __init__.py  base.py  bases.py  builders.py  error.py  errors.py  events.py  extension.py  extensions.py  filters.py  handler.py  handlers.py  info.py  lavalink.py  player.py  playlist.py  route_planner.py  routeplanner.py  server.py  session.py  statistics.py  track.py
ongaku/api/: __init__.py  builders.py  handlers.py  rest.py
ongaku/events/: __init__.py  event_handler.py  general.py  other.py  track.py
ongaku/ext/: __init__.py
ongaku/ext/checker/: __init__.py  abc.py  checker.py
ongaku/ext/injection/: __init__.py  arc.py
ongaku/ext/local/: __init__.py  local.py
ongaku/ext/youtube/: __init__.py  endpoints.py  youtube.py
ongaku/impl/: __init__.py  errors.py  events.py  filters.py  handlers.py  info.py  player.py  playlist.py  routeplanner.py  session.py  statistics.py  track.py
ongaku/internal/: __init__.py  about.py  converters.py  logger.py  logging.py  routes.py  types.py
ongaku/models/: __init__.py  filter.py  player.py  rest.py  session.py  setup.py  track.py  websocket.py
requirements/: arc.txt  dev.txt  doc.txt  injection.txt  speedups.txt  tests.txt
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api_reference/: index.html
site/api_reference/abc/events/: index.html
site/api_reference/abc/lavalink/: index.html
site/api_reference/abc/player/: index.html
site/api_reference/abc/session/: index.html
site/api_reference/errors/: index.html
site/api_reference/ongaku/: index.html
site/api_reference/player/: index.html
site/api_reference/rest/: index.html
site/getting_started/: index.html
site/getting_started/basics/: index.html
site/getting_started/commands/: index.html
site/getting_started/nodes/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site_build/: 404.html  index.html  sitemap.xml
site_build/api_reference/: index.html
site_build/api_reference/ongaku/: index.html
site_build/getting_started/commands/: index.html
tests/: __init__.py  conftest.py  endpoints.py  mock_classes.py  mocker.py  objects.py  payload.py  payloads.py  test_builders.py  test_client.py  test_errors.py  test_events.py  test_filters.py  test_handlers.py  test_information.py  test_ongaku.py  test_player.py  test_players.py  test_playlist.py  test_rest.py  test_routeplanner.py  test_session.py  test_sessions.py  test_statistics.py  test_track.py
tests/api/: test_builders.py  test_handlers.py  test_rest.py
tests/ext/: checker.py  test_checker.py  test_injection.py  test_youtube.py  youtube.py
tests/ext/checker/: test_checker.py
tests/ext/injection/: test_arc.py
tests/ext/youtube/: test_endpoints.py
tests/impl/: test_error.py  test_event.py  test_events.py  test_filters.py  test_handlers.py  test_info.py  test_player.py  test_playlist.py  test_routeplanner.py  test_session.py  test_statistics.py  test_track.py
tests/internal/: test_routes.py
tests/test_abc/: __init__.py  test_error.py  test_events.py  test_filters.py  test_info.py  test_lavalink.py  test_player.py  test_playlist.py  test_route_planner.py  test_session.py  test_statistics.py  test_track.py
(+4 files in other folders)
