[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hikari-ongaku"
requires-python = ">=3.10.0,<3.14"
dependencies = [
    "hikari ~= 2.3.3",
    "aiohttp ~= 3.12.9"
]
dynamic = [
    "version",
    "description",
    "readme",
    "license",
    "authors",
    "maintainers",
    "classifiers",
    "urls",
    "optional-dependencies"
]

[dependency-groups]
dev = [
    "nox[uv] ~= 2025.5.0"
]
doc = [
    "black ~= 25.1.0",
    "mkdocs ~= 1.6.0",
    "mkdocs-autorefs ~= 1.4.0",
    "mkdocs-material[imaging] ~= 9.6.0",
    "mkdocs-material-extensions ~= 1.3.0",
    "mkdocstrings-python ~= 1.16.0",
    "mkdocstrings ~= 0.29.0",
    "Pygments ~= 2.19.0",
    "pymdown-extensions ~= 10.15.0",
    "PyYAML ~= 6.0.0",
    "pyyaml_env_tag ~= 1.0.0",
    "Markdown ~= 3.7.0",
    "MarkupSafe ~= 3.0.0",
    "mergedeep ~= 1.3.0",
    "griffe-inherited-docstrings ~= 1.1.0"
]
test = [
    "pytest ~= 8.3.0",
    "mock ~= 5.1.0",
    "orjson ~= 3.10.0",
    "pytest-asyncio ~= 0.25.0",
    "pytest-aiohttp ~= 1.0.0"
]
format = [
    "ruff ~= 0.11.0"
]


[tool.uv]
required-version = "~=0.6"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportMissingTypeStubs = true
reportUnnecessaryTypeIgnoreComment = "warning"
reportUninitializedInstanceVariable = "error"
reportShadowedImports = "warning"

[tool.ruff]
extend-exclude = ["examples/*", ".venv/*"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint]
select = ["E", "F", "I", "C", "N", "D2", "D3", "D415", "D417", "D418", "D419", "ASYNC", "Q", "RSE", "SIM", "RUF"]
ignore = ["F405", "F403", "E501", "D205"]
fixable = ["I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"